Refactoring Spring Exception Handling and Controller Architecture
- Renamed CustomExceptionHandler to GlobalExceptionHandler to align with Spring conventions, and updated it to handle MethodArgumentNotValidException rather than the non‑thrown ConstraintViolationException.
- Added TODO annotations to mark future work.
- Redesigned all controllers to use private‑constructor injection for improved security, centralized their error schema via a class‑level annotation to eliminate repetition, and introduced ErrorResponse class as the error schema.
- Modified ErrorResponse to use final attributes since they are never meant to be modified.
- Ensured full API mapping by adding `@RequestMapping` to each controller, and refined OpenAPI annotations to explicitly declare List<…> return schemas.
- Streamlined code style by removing superfluous braces and replacing !optional.isPresent() with optional.isEmpty().
- Annotated every repository interface with `@Repository`.
- Corrected a typo in IssueController.getCommentsByIssueId().
- Removed constructor parameters from all exception classes: no longer accepting a String, since the exception objects themselves aren’t used and, being specific, they don’t need to carry a message; context is now handled within the exception handler.
- Removed the obsolete PullRequest class and its pullRequest attribute from the Project model.
- Finally, fixed ProjectController.createProject() to assign the incoming web_url to newly created project.